# Py_File_OrganizerV2.0

./: CLAUDE.md  README.md  build_windows.ps1  file_organizer_v2.py  folders_config.json  pyproject.toml
src/: file_organizer_v2.py
